navbar mobile collapsed version working, but still buggy.

--- a/client/css/navbar.less
+++ b/client/css/navbar.less
@@ -1,4 +1,8 @@
 nav{
+  width: 100%;
+  background-color: #604830 !important;
+  .container {
+    .navbar-header { a { padding-left:0px; } } }
   ul {
     li {
 
