--- a/client/css/problems.less
+++ b/client/css/problems.less
@@ -38,7 +38,7 @@ body{
 //    width: 640px;
 //  }
 //}
-.nav>li>a {
+ul.nav.nav-stacked>li>a {
   padding: 7px 15px;
 }
 .panel-heading {
